vectors uploaded and optimized
created with icomoon and optimized with svgomg

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         </nav>
         <ul class="header-contacts-list">
           <li class="header-contacts-item">
-            <a class="nav-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <span class="lnr lnr-envelope">
+              <a class="nav-contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              ></span
             >
           </li>
           <li class="header-contacts-item">
