--- a/index.html
+++ b/index.html
@@ -35,11 +35,19 @@
         </nav>
         <ul class="header-contacts-list">
           <li class="header-contacts-item">
-            <span class="lnr lnr-envelope">
-              <a class="nav-contact" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              ></span
+            <svg class="header-icon">
+              <use href="./assets/images/svg-icons.svg#icon-envelope"></use>
+            </svg>
+          </li>
+          <li class="header-contacts-item">
+            <a class="nav-contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
+          </li>
+          <li class="header-contacts-item">
+            <svg class="header-icon">
+              <use href="./assets/images/svg-icons.svg#icon-smartphone"></use>
+            </svg>
           </li>
           <li class="header-contacts-item">
             <a class="nav-contact" href="tel:+12127724150">+1 212-772-4150</a>
@@ -135,6 +143,36 @@
               />
               <h3 class="team-nametag">Christopher Walker</h3>
               <p class="team-work">Product Designer</p>
+              <ul class="social-icon-list">
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="ourteam-items">
               <img
@@ -145,6 +183,36 @@
               />
               <h3 class="team-nametag">Kylie Evans</h3>
               <p class="team-work">Frontend Developer</p>
+                <ul class="social-icon-list">
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="ourteam-items">
               <img
@@ -155,6 +223,36 @@
               />
               <h3 class="team-nametag">Ryan Harris</h3>
               <p class="team-work">Marketing</p>
+                <ul class="social-icon-list">
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="ourteam-items">
               <img
@@ -165,8 +263,36 @@
               />
               <h3 class="team-nametag">Tyler Moore</h3>
               <p class="team-work">UI Designer</p>
-            </li>
-          </ul>
+                <ul class="social-icon-list">
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
+                    ></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="social-icon">
+                    <use
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
         </div>
       </section>
     </main>
