--- a/index.html
+++ b/index.html
@@ -265,6 +265,9 @@
               <p class="team-work">UI Designer</p>
                 <ul class="social-icon-list">
                 <li>
+                  <svg width="44px" height="44px" class="social-circle">
+                  <circle r="22px" cx="100" cy="200"/>
+                  </svg>
                   <svg class="social-icon">
                     <use
                       href="./assets/images/svg-icons.svg#icon-icon-instagram"
@@ -295,6 +298,19 @@
               </ul>
         </div>
       </section>
+      <section>
+        <h3 class="customers-head">Regular Customers</h3>
+        <ul class="customers-list">
+        <li class="customers-item"><svg class="customers-svg"><use href="./assets/images/svg-icons.svg#icon-client1logo"></use></svg></li>
+        <li class="customers-item"><svg class="customers-svg"><use href="./assets/images/svg-icons.svg#icon-client2logo"></use></svg></li>
+        <li class="customers-item"><svg class="customers-svg"><use href="./assets/images/svg-icons.svg#icon-client3logo"></use></svg></li>
+        <li class="customers-item"><svg class="customers-svg"><use href="./assets/images/svg-icons.svg#icon-client4logo"></use></svg></li>
+        <li class="customers-item"><svg class="customers-svg"><use href="./assets/images/svg-icons.svg#icon-client5logo"></use></svg></li>
+        <li class="customers-item"><svg class="customers-svg"><use href="./assets/images/svg-icons.svg#icon-client6logo"></use></svg></li>  
+      </ul>
+
+      </section>
+      </main>
     </main>
     <footer class="footersection">
       <div class="container">
