adjusted svg styles

--- a/index.html
+++ b/index.html
@@ -34,22 +34,23 @@
           </ul>
         </nav>
         <ul class="header-contacts-list">
-          <li class="header-contacts-item">
-            <svg class="header-icon">
-              <use href="./assets/images/svg-icons.svg#icon-envelope"<use><a href="#"></a></use>
+          <li>
+            <svg class="header-icon envelope">
+              <use href="./assets/images/svg-icons.svg#icon-envelope"></use><use><a href="#"></a></use>
+              <a class="nav-contact" href="mailto:info@devstudio.com"> info@devstudio.com</a>
             </svg>
+            </li>
+            <li class="header-contacts-item">
+            <a class="nav-contact" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            
           </li>
-          <li class="header-contacts-item">
-            <a class="nav-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-contacts-item">
-            <svg class="header-icon">
-              <use href="./assets/images/svg-icons.svg#icon-smartphone"<use><a href="#"></a></use>
+          <li>
+            <svg class="header-icon phone">
+              <use href="./assets/images/svg-icons.svg#icon-smartphone"></use><use><a href="#"></a></use>
+            <a class="nav-contact" href="tel:+12127724150">+1 212-772-4150</a>
             </svg>
-          </li>
-          <li class="header-contacts-item">
+            </li>
+            <li class="header-contacts-item">
             <a class="nav-contact" href="tel:+12127724150">+1 212-772-4150</a>
           </li>
         </ul>
@@ -371,6 +372,7 @@
       </main>
     </main>
     <footer class="footersection">
+      <section class="footer-section-list">
       <div class="footer-section-items container">
         <a class="logo footerlogo" href="index.html">WebStudio</a>
         <address class="foot">
@@ -443,6 +445,8 @@
                 </li>
                 </ul>
       </div>
+      <div class="footer-section-items"></div>
+      </section>
     </footer>
   </body>
 </html>
