--- a/portfolio.html
+++ b/portfolio.html
@@ -33,26 +33,19 @@
               <a class="nav-link" href="#" title="Contacts">Contacts</a>
             </li>
           </ul>
-        </nav>
-        <ul class="header-contacts-list">
-          <li>
-            <svg class="header-icon envelope">
-              <use href="./assets/images/svg-icons.svg#icon-envelope"></use><use><a href="#"></a></use>
-              <a class="nav-contact" href="mailto:info@devstudio.com"> info@devstudio.com</a>
-            </svg>
-            </li>
+        </nav>        <ul class="header-contacts-list">
             <li class="header-contacts-item">
-            <a class="nav-contact" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            <a class="nav-contact" href="mailto:info@devstudio.com">
+              <svg class="header-icon envelope" width="16px" height="12px">
+              <use href="./assets/images/svg-icons.svg#icon-envelope"></use>
+            </svg> info@devstudio.com</a>
             
           </li>
-          <li>
-            <svg class="header-icon phone">
-              <use href="./assets/images/svg-icons.svg#icon-smartphone"></use><use><a href="#"></a></use>
-            <a class="nav-contact" href="tel:+12127724150">+1 212-772-4150</a>
-            </svg>
-            </li>
             <li class="header-contacts-item">
-            <a class="nav-contact" href="tel:+12127724150">+1 212-772-4150</a>
+            <a class="nav-contact" href="tel:+12127724150">
+              <svg class="header-icon phone" width="10px" height="16px">
+              <use href="./assets/images/svg-icons.svg#icon-smartphone"></use>
+            </svg>+1 212-772-4150</a>
           </li>
         </ul>
       </div>
