--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       </main>
       <!-- FOOTER SECTION -->
     <footer class="footersection">
-      <div class="footer-section-items container">
+      <div class="footer-sections container">
         <div class="footer-left-part">
         <a class="logo footerlogo" href="index.html">WebStudio</a>
         <address class="footer-address">
@@ -409,40 +409,39 @@
           </ul>
         </address>
       </div>
-      </div>
       <div class="footer-section-items middle-footer-section">
         <h3 class="middle-footer-head">FIND US ON</h3>
                       <ul class="social-icon-footer-list">
-                <li>
-                  <a href="#">
-                  <svg width="20px" height="20px">
+                <li class="footer-social-list-item">
+                  <a class="footer-social-icon-link" href="#">
+                  <svg class="footer-social-icon" width="20px" height="20px">
                     <use
                       href="./assets/images/svg-icons.svg#icon-icon-instagram"
                       use></use>
                   </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="#">
-                  <svg width="20px" height="20px">
+                <li class="footer-social-list-item">
+                  <a class="footer-social-icon-link" href="#">
+                  <svg class="footer-social-icon" width="20px" height="20px">
                   <use
                       href="./assets/images/svg-icons.svg#icon-icon-twitter"
                       use></use>
                   </svg>
                 </a>
                 </li>
-                <li>
-                  <a href="#">
-                  <svg width="20px" height="20px">
+                <li class="footer-social-list-item">
+                  <a class="footer-social-icon-link" href="#">
+                  <svg class="footer-social-icon" width="20px" height="20px">
                     <use
                       href="./assets/images/svg-icons.svg#icon-icon-facebook"
                       use></use>
                   </svg>
                 </a>
                 </li>
-                <li>
-                  <a href="#">
-                  <svg width="20px" height="20px">
+                <li class="footer-social-list-item">
+                  <a class="footer-social-icon-link" href="#">
+                  <svg class="footer-social-icon" width="20px" height="20px">
                     <use
                       href="./assets/images/svg-icons.svg#icon-icon-linkedin"
                     use></use>
@@ -451,8 +450,7 @@
                 </li>
               </ul>
               </div>
-      </div>
-      </section>
+            </div>
     </footer>
   </body>
 </html>
