--- a/portfolio.html
+++ b/portfolio.html
@@ -2,60 +2,62 @@
 <html lang="en">
   <head>
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <meta charset="utf-8" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 </html>
 <body>
-<header class="nav-back">
-  <!-- HEADER -->
-      <div class="container header-container">
-        <a class="logo headerlogo" href="index.html">WebStudio</a>
-        <nav>
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a
-                class="nav-link nav-link-this-page"
-                href="index.html"
-                title="Studio"
-                >Studio</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html" title="Portfolio"
-                >Portfolio</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" title="Contacts">Contacts</a>
-            </li>
-          </ul>
-        </nav>        <ul class="header-contacts-list">
-            <li class="header-contacts-item">
-            <a class="nav-contact" href="mailto:info@devstudio.com">
-              <svg class="header-icon envelope" width="16px" height="12px">
-              <use href="./assets/images/svg-icons.svg#icon-envelope"></use>
-            </svg> info@devstudio.com</a>
-            
+  <header class="nav-back">
+    <!-- HEADER -->
+    <div class="container header-container">
+      <a class="logo headerlogo" href="index.html">WebStudio</a>
+      <nav>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html" title="Studio">Studio</a>
           </li>
-            <li class="header-contacts-item">
-            <a class="nav-contact" href="tel:+12127724150">
-              <svg class="header-icon phone" width="10px" height="16px">
-              <use href="./assets/images/svg-icons.svg#icon-smartphone"></use>
-            </svg>+1 212-772-4150</a>
+          <li class="nav-item">
+            <a
+              class="nav-link nav-link-this-page"
+              href="portfolio.html"
+              title="Portfolio"
+              >Portfolio</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" title="Contacts">Contacts</a>
           </li>
         </ul>
-      </div>
-    </header>
-  <main>      
+      </nav>
+      <ul class="header-contacts-list">
+        <li class="header-contacts-item">
+          <a class="nav-contact" href="mailto:info@devstudio.com">
+            <svg class="header-icon envelope" width="16px" height="12px">
+              <use href="./assets/images/svg-icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a
+          >
+        </li>
+        <li class="header-contacts-item">
+          <a class="nav-contact" href="tel:+12127724150">
+            <svg class="header-icon phone" width="10px" height="16px">
+              <use href="./assets/images/svg-icons.svg#icon-smartphone"></use>
+            </svg>
+            +1 212-772-4150
+          </a>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <main>
     <!-- PROJECT SECTION -->
     <section class="project-section">
-    <div class="container">
-        <ul  class="gallery-button-container">
+      <div class="container">
+        <ul class="gallery-button-container">
           <li class="gallery-button-item">
             <button class="gallery-button" type="button">All</button>
           </li>
@@ -81,8 +83,8 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Technoduck</h3>
-            <p class="art-desc">Web-site</p>
+              <h3 class="art-name">Technoduck</h3>
+              <p class="art-desc">Web-site</p>
             </div>
           </li>
           <li class="art-back">
@@ -93,8 +95,8 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Poster New Orleans vs Golden Star</h3>
-            <p class="art-desc">Design</p>
+              <h3 class="art-name">Poster New Orleans vs Golden Star</h3>
+              <p class="art-desc">Design</p>
             </div>
           </li>
           <li class="art-back">
@@ -105,9 +107,9 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Seafood Restaurant</h3>
-            <p class="art-desc">Apps</p>
-          </div>
+              <h3 class="art-name">Seafood Restaurant</h3>
+              <p class="art-desc">Apps</p>
+            </div>
           </li>
 
           <li class="art-back">
@@ -118,9 +120,9 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Project Prime</h3>
-            <p class="art-desc">Marketing</p>
-          </div>
+              <h3 class="art-name">Project Prime</h3>
+              <p class="art-desc">Marketing</p>
+            </div>
           </li>
           <li class="art-back">
             <img
@@ -130,9 +132,9 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Project Boxes</h3>
-            <p class="art-desc">Apps</p>
-          </div>
+              <h3 class="art-name">Project Boxes</h3>
+              <p class="art-desc">Apps</p>
+            </div>
           </li>
           <li class="art-back">
             <img
@@ -142,9 +144,9 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Inspiration has no Borders</h3>
-            <p class="art-desc">Web-site</p>
-          </div>
+              <h3 class="art-name">Inspiration has no Borders</h3>
+              <p class="art-desc">Web-site</p>
+            </div>
           </li>
 
           <li class="art-back">
@@ -155,9 +157,9 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Limited Edition</h3>
-            <p class="art-desc">Design</p>
-          </div>
+              <h3 class="art-name">Limited Edition</h3>
+              <p class="art-desc">Design</p>
+            </div>
           </li>
           <li class="art-back">
             <img
@@ -167,9 +169,9 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Project LAB</h3>
-            <p class="art-desc">Marketing</p>
-          </div>
+              <h3 class="art-name">Project LAB</h3>
+              <p class="art-desc">Marketing</p>
+            </div>
           </li>
           <li class="art-back">
             <img
@@ -179,18 +181,18 @@
               width="370"
             />
             <div class="art-text">
-            <h3 class="art-name">Growing Business</h3>
-            <p class="art-desc">Apps</p>
-          </div></
-          li>  
+              <h3 class="art-name">Growing Business</h3>
+              <p class="art-desc">Apps</p>
+            </div>
+          </li>
         </ul>
-    </div>
+      </div>
     </section>
-  </main>        
-         <!-- FOOTER SECTION -->
-    <footer class="footersection">
-      <div class="footer-section-items container">
-        <div class="footer-left-part">
+  </main>
+  <!-- FOOTER SECTION -->
+  <footer class="footersection">
+    <div class="footer-sections container">
+      <div class="footer-left-part">
         <a class="logo footerlogo" href="index.html">WebStudio</a>
         <address class="footer-address">
           <ul class="footertext-container">
@@ -211,55 +213,57 @@
             </li>
             <li class="footertext-item">
               <a class="foot-contact foot-phone" href="tel:+1217724150">
-                +1 212-772-4150</a
-              >
+                +1 212-772-4150
+              </a>
             </li>
           </ul>
         </address>
       </div>
-      </div>
       <div class="footer-section-items middle-footer-section">
         <h3 class="middle-footer-head">FIND US ON</h3>
-                      <ul class="social-icon-footer-list">
-                <li>
-                  <a href="#">
-                  <svg width="20px" height="20px">
-                    <use
-                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
-                      use></use>
-                  </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                  <svg width="20px" height="20px">
-                  <use
-                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
-                      use></use>
-                  </svg>
-                </a>
-                </li>
-                <li>
-                  <a href="#">
-                  <svg width="20px" height="20px">
-                    <use
-                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
-                      use></use>
-                  </svg>
-                </a>
-                </li>
-                <li>
-                  <a href="#">
-                  <svg width="20px" height="20px">
-                    <use
-                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
-                    use></use>
-                  </svg>
-                </a>
-                </li>
-              </ul>
-              </div>
+        <ul class="social-icon-footer-list">
+          <li class="footer-social-list-item">
+            <a class="footer-social-icon-link" href="#">
+              <svg class="footer-social-icon" width="20px" height="20px">
+                <use
+                  href="./assets/images/svg-icons.svg#icon-icon-instagram"
+                  use
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a class="footer-social-icon-link" href="#">
+              <svg class="footer-social-icon" width="20px" height="20px">
+                <use
+                  href="./assets/images/svg-icons.svg#icon-icon-twitter"
+                  use
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a class="footer-social-icon-link" href="#">
+              <svg class="footer-social-icon" width="20px" height="20px">
+                <use
+                  href="./assets/images/svg-icons.svg#icon-icon-facebook"
+                  use
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a class="footer-social-icon-link" href="#">
+              <svg class="footer-social-icon" width="20px" height="20px">
+                <use
+                  href="./assets/images/svg-icons.svg#icon-icon-linkedin"
+                  use
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
-      </section>
-    </footer>
+    </div>
+  </footer>
 </body>
