--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"></use>
                   </svg>
                   </a>
                 </li>
@@ -169,8 +168,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                   <use
-                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"></use>
                   </svg>
                 </a>
                 </li>
@@ -179,8 +177,7 @@
                   <svg class="social-icon" width="20px" height="20px">
                   
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"></use>
                   </svg>
                 </a>
                 </li>
@@ -188,8 +185,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
-                    use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"></use>
                   </svg>
                 </a>
                 </li>
@@ -209,8 +205,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"></use>
                   </svg>
                   </a>
                 </li>
@@ -218,8 +213,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                   <use
-                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"></use>
                   </svg>
                 </a>
                 </li>
@@ -227,8 +221,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"></use>
                   </svg>
                 </a>
                 </li>
@@ -236,8 +229,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
-                    use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"></use>
                   </svg>
                 </a>
                 </li>
@@ -257,8 +249,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"></use>
                   </svg>
                   </a>
                 </li>
@@ -266,8 +257,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                   <use
-                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"></use>
                   </svg>
                 </a>
                 </li>
@@ -275,8 +265,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"></use>
                   </svg>
                 </a>
                 </li>
@@ -284,8 +273,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
-                    use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"></use>
                   </svg>
                 </a>
                 </li>
@@ -305,8 +293,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"></use>
                   </svg>
                   </a>
                 </li>
@@ -314,8 +301,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                   <use
-                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"></use>
                   </svg>
                 </a>
                 </li>
@@ -323,8 +309,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"></use>
                   </svg>
                 </a>
                 </li>
@@ -332,8 +317,7 @@
                   <a href="#" class="social-icon-link">
                   <svg class="social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
-                    use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"></use>
                   </svg>
                 </a>
                 </li>
@@ -416,8 +400,7 @@
                   <a class="footer-social-icon-link" href="#">
                   <svg class="footer-social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-instagram"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-instagram"></use>
                   </svg>
                   </a>
                 </li>
@@ -425,8 +408,7 @@
                   <a class="footer-social-icon-link" href="#">
                   <svg class="footer-social-icon" width="20px" height="20px">
                   <use
-                      href="./assets/images/svg-icons.svg#icon-icon-twitter"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-twitter"></use>
                   </svg>
                 </a>
                 </li>
@@ -434,8 +416,7 @@
                   <a class="footer-social-icon-link" href="#">
                   <svg class="footer-social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-facebook"
-                      use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-facebook"></use>
                   </svg>
                 </a>
                 </li>
@@ -443,8 +424,7 @@
                   <a class="footer-social-icon-link" href="#">
                   <svg class="footer-social-icon" width="20px" height="20px">
                     <use
-                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"
-                    use></use>
+                      href="./assets/images/svg-icons.svg#icon-icon-linkedin"></use>
                   </svg>
                 </a>
                 </li>
